--- a/client/styles/ticketValidate.css
+++ b/client/styles/ticketValidate.css
@@ -1,6 +1,6 @@
 .red {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 120px);
     padding-top: 15px;
     background-color: red;
 }
@@ -23,7 +23,7 @@
 }
 
 .video {
-    width: 80%;
+    width: 100%;
     height: auto;
     margin-top: var(--margin);
     border: 5px solid black;
@@ -36,33 +36,27 @@
 }
 
 .form {
-    margin-top: var(--margin);
+    margin-top: 30px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.formInput {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 15px;
-}
-
 .input {
     background: #FFFFFF;
-    width: 40%;
+    width: 94%;
+    margin-bottom: var(--margin);
     padding: 10px;
     border: 2px solid #000000;
     border-radius: 5px;
 }
 
 .submit {
-
-    margin-top: var(--margin);
-    background: #FFFFFF;
-    width: 40%;
+    background: var(--primary-color);
+    width: 100%;
     padding: 10px;
     border: 2px solid #000000;
+    color: white;
     border-radius: 5px;
 }
