--- a/client/styles/profil.css
+++ b/client/styles/profil.css
@@ -17,7 +17,7 @@
     width: 100%;
     font-size: 0.9rem;
     height: 120px;
-    background-color: gray;
+    background-color: rgb(170, 170, 170);
 }
 
 #conteneur1 {
@@ -43,7 +43,7 @@
     gap: 10%;
     font-size: 0.9rem;
     height: 60px;
-    background-color: gray;
+    background-color: rgb(170, 170, 170);
 }
 
 
