--- a/client/styles/login.css
+++ b/client/styles/login.css
@@ -13,6 +13,8 @@
     padding: var(--padding);
     margin-left: 10%;
     padding: 2%;
+    border: 2px solid black;
+    border-radius: 4px;
 }
 
 
@@ -24,6 +26,8 @@
     margin-top: 2%;
     margin-left: 10%;
     padding: 2%;
+    border: 2px solid black;
+    border-radius: 4px;
 }
 
 .mdpDesc {
