--- a/client/styles/login.css
+++ b/client/styles/login.css
@@ -6,45 +6,11 @@
     margin: var(--margin);
 }
 
-.iEMAIL {
-    display: flex;
-    justify-content: center;
-    width: 70%;
-    padding: var(--padding);
-    margin-left: 10%;
-    padding: 2%;
-    border: 2px solid black;
-    border-radius: 4px;
-}
-
-
-.iMDP {
-    display: flex;
-    justify-content: center;
-    width: 70%;
-    padding: var(--padding);
-    margin-top: 2%;
-    margin-left: 10%;
-    padding: 2%;
-    border: 2px solid black;
-    border-radius: 4px;
-}
-
-.mdpDesc {
-    display: flex;
-    justify-content: center;
-    width: 70%;
-    padding: var(--padding);
-    margin-left: 10%;
-    padding: 1%;
-}
-
 .button {
     display: flex;
     justify-content: center;
-    width: 80%;
+    width: 100%;
     padding: var(--padding);
-    margin-left: 10%;
     margin-right: 10%;
     margin-top: 5%;
     padding: 2%;
@@ -52,6 +18,7 @@
     border: 0px;
     border-radius: 5px;
     text-decoration: none;
+    margin-right: 15px;
     color: white;
     font-weight: 600;
 }
@@ -60,6 +27,5 @@
     display: flex;
     width: 70%;
     padding: var(--padding);
-    margin-left: 10%;
     padding: 1%;
 }
