--- a/client/styles/oneEvent.css
+++ b/client/styles/oneEvent.css
@@ -90,15 +90,16 @@
 }
 
 .containerButtonOrga {
-    display: none;
     margin-top: 30px;
+    display: flex;
+    flex-direction: column;
 }
 
 .buttonOrga {
-    width: 91%;
     margin: var(--margin);
     background-color: #ffffff;
     border: 2px solid var(--primary-color);
+    padding: 10px;
     color: black;
     display: block;
 }
